--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-demi-test",
+  "name": "project-test",
   "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "@vue/composition-api": "^1.0.0-beta.23"
   },
   "devDependencies": {
     "@golem-ai/design-system": "file:../lib-test",
