--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.23",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "@vue/composition-api": "^1.0.0-beta.23"
+    "vue-demi": "^0.5.4"
   },
   "devDependencies": {
-    "@golem-ai/design-system": "file:../lib-test",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
